package fr.n7.hagimule.client;

/**
 * Sur les clients.
 * <p>
 * Permet de télécharger en parallèle des fichiers.
 */
public class Downloader {

}